ansible/roles/master_node/files/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: ghcr.io/icykcypher/kubelab/orchestration-service:latest
        ports:
        - containerPort: 8080
